# cashi_project

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  setup.sh
data/: predictions.db
docs/: dataDictionary.MD
frontend/: app.py
notebooks/: credit_scoring_model.ipynb
src/: __init__.py
src/api/: __init__.py  database.py  main.py  schemas.py
src/api/routes/: __init__.py  credit.py  health.py
src/loader/: __init__.py  loader.py  preprocessor.py
src/models/: __init__.py  credit_model.pkl  model_config.pkl  scorecard.pkl  woe_transformer.pkl
src/monitoring/: __init__.py  logger.py
tests/: __init__.py  conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: __init__.py  test_explanation.py  test_risk_override.py  test_validate_applicant.py
