[project]
name = "cashi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.1",
    "altair>=6.0.0",
    "black>=25.12.0",
    "evidently>=0.7.20",
    "faker>=40.1.2",
    "fastapi>=0.128.0",
    "flake8>=7.3.0",
    "great-expectations>=0.9.6",
    "httpx>=0.28.1",
    "imbalanced-learn>=0.14.1",
    "isort>=7.0.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "lime>=0.2.0.1",
    "llvmlite>=0.40",
    "loguru>=0.7.3",
    "mypy>=1.19.1",
    "numba>=0.59",
    "numpy>=1.24,<2.4",
    "pandas>=2.3.3",
    "plotly>=5.24.1",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.53.0",
    "uvicorn[standard]>=0.40.0",
    "xgboost>=3.1.3",
]
